--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
