--- a/package.json
+++ b/package.json
@@ -18,29 +18,29 @@
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-e2e-cypress": "^5.0.8",
+    "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
-    "@vue/cli-service": "^5.0.8",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
-    "autoprefixer": "^10.4.14",
     "babel-jest": "^27.0.6",
-    "cypress": "^12.17.2",
-    "eslint": "^7.32.0",
+    "cypress": "^9.7.0",
+    "eslint": "^8.0.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^9.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.2.0",
     "jest": "^27.0.5",
     "lint-staged": "^11.1.2",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
     "ts-jest": "^27.0.4",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
